2007-11-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.BrowserDisplayBinding/BrowserDisplayBinding.cs,
	  MonoDevelop.Ide.Gui.BrowserDisplayBinding/HtmlViewPane.cs,
	  MonoDevelop.Ide.Gui.Content/IClipboardHandler.cs,
	  MonoDevelop.Ide.Gui.Search/BruteForceSearchStrategy.cs,
	  MonoDevelop.Ide.Gui.Search/SearchOptions.cs,
	  MonoDevelop.Ide.Gui.Search/WildcardSearchStrategy.cs: Remove reference
	  to old namespace.

2007-11-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.StandardHeader/StandardHeaderService.cs,
	  MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs:
	  StandardHeaderService now takes care of replacing variables used in the
	  header.

2007-11-22  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.Ide.Gui.BrowserDisplayBinding/HTMLInterfaces.cs,
	  MonoDevelop.Ide.Gui.Dialogs/AddWebReferenceDialog.cs,
	  MonoDevelop.Ide.Gui.Undo,
	  MonoDevelop.Ide.Gui.Undo/IUndoableOperation.cs,
	  MonoDevelop.Ide.Gui.Undo/UndoQueue.cs,
	  MonoDevelop.Ide.Gui.Undo/UndoStack.cs, templates/Workspace.xpt.xml,
	  MonoDevelop.Ide.mdp: Removed unused files. Added Workspace template.

2007-11-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.OptionPanels/ExternalToolPanel.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/UnknownEntryNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs,
	  MonoDevelop.Ide.Gui.Pads/FileListItem.cs,
	  MonoDevelop.Ide.Gui.Pads/FileScout.cs,
	  MonoDevelop.Ide.Gui.Pads/MonodocTreePad.cs,
	  MonoDevelop.Ide.Gui.Pads/TreeViewItem.cs,
	  MonoDevelop.Ide.Gui.Search/ExtendedStreamReader.cs,
	  MonoDevelop.Ide.Gui.Search/ForwardTextFileIterator.cs,
	  MonoDevelop.Ide.Gui.Search/IDocumentInformation.cs,
	  MonoDevelop.Ide.Templates/FileDescriptionTemplate.cs,
	  MonoDevelop.Ide.Templates/ICombineEntryFeature.cs,
	  MonoDevelop.Ide.Templates/INewFileCreator.cs: Added missing license
	  headers.

2007-11-21  Lluis Sanchez Gual <lluis@novell.com> 
